examples/negative/stage1_rejections/protocol_decl.kai
# Negative fixture (#511 / stage1 rejection): `protocol` is a
# stage-2-only construct (see stdlib/protocols.kai header).
# stage1/kaic1 must reject cleanly, not segfault.

protocol Show {
  show(x: Self) : String
}

fn main() : Int = 0
